xsldir = $(pkgdatadir)/xsl

xsl_DATA =   xccdf-share.xsl \
			 \
             xccdf-guide.xsl \
			 \
             xccdf-report.xsl \
             xccdf-report-oval-details.xsl \
             \
             oval-results-report.xsl \
             \
             legacy-fix.xsl \
             legacy-fixtpl-bash.xml \
             legacy-xccdf-share.xsl \
             \
             xccdf_1.1_to_1.2.xsl \
             xccdf_1.1_remove_dangling_sub.xsl

EXTRA_DIST = xccdf-share.xsl \
			 \
             xccdf-guide.xsl \
			 \
             xccdf-report.xsl \
             xccdf-report-oval-details.xsl \
             \
             oval-results-report.xsl \
             \
             legacy-fix.xsl \
             legacy-fixtpl-bash.xml \
             legacy-xccdf-share.xsl \
             \
             xccdf_1.1_to_1.2.xsl \
             xccdf_1.1_remove_dangling_sub.xsl
